changes in dropdown

--- a/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
+++ b/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
@@ -1,7 +1,11 @@
 <!-- container-section -->
-<section class="container-fluid p-0 vh-100 d-flex justify-content-between flex-sm-column">
+<section
+  class="container-fluid p-0 vh-100 d-flex justify-content-between flex-sm-column"
+>
   <!-- main-section -->
-  <section class="container d-flex justify-content-center align-items-center my-5">
+  <section
+    class="container d-flex justify-content-center align-items-center my-5"
+  >
     <div class="row justify-content-center align-items-center">
       <!-- image-section -->
       <div class="col-5 pe-4">
@@ -10,33 +14,49 @@
             Design New,<span class="text-primary"> Rewards!</span>
           </div>
           <p>Shape Experiences, One Reward at a Time!</p>
-          <mat-card class="bg-white shadow-sm product-reward-card p-3 mt-3" appearance="outlined">
+          <mat-card
+            class="bg-white shadow-sm product-reward-card p-3 mt-3"
+            appearance="outlined"
+          >
             <mat-card-content class="d-block">
-              <span class="badge shadow-sm bg-dark text-white fs-12">{{
-                this.addGiftItemForm.get("couponCode")?.value || "Coupon Code"
+              <span class="badge shadow-sm bg-dark text-white fs-12"
+                >{{
+                  this.addGiftItemForm.get("couponCode")?.value || "Coupon Code"
                 }}
               </span>
               <div class="d-flex justify-content-center my-5">
-                <img mat-card-image height="200" width="200" alt="Product Image" [src]="currentImage ||  'assets/images/products/create-magic.png'" />
+                <img
+                  mat-card-image
+                  height="200"
+                  width="200"
+                  alt="Product Image"
+                  [src]="
+                    currentImage || 'assets/images/products/create-magic.png'
+                  "
+                />
               </div>
               <div>
                 <div>
                   {{
-                  this.addGiftItemForm.get("productTitle")?.value ||
-                  "Product Title"
+                    this.addGiftItemForm.get("productTitle")?.value ||
+                      "Product Title"
                   }}
                 </div>
 
                 <div class="fs-12">
                   {{
-                  this.addGiftItemForm.get("productDescription")?.value ||
-                  "Product Description"
+                    this.addGiftItemForm.get("productDescription")?.value ||
+                      "Product Description"
                   }}
                 </div>
               </div>
 
               <div>
-                <button [disabled]="true" mat-flat-button class="button-mh-60 w-100 bg-dark mt-2 claim-gift-btn">
+                <button
+                  [disabled]="true"
+                  mat-flat-button
+                  class="button-mh-60 w-100 bg-dark mt-2 claim-gift-btn opacity-fade"
+                >
                   <mat-icon>celebration</mat-icon>claim gift
                 </button>
               </div>
@@ -46,65 +66,120 @@
       </div>
       <!-- /image-section -->
       <div class="col-5 position-relative">
-        <img class="curve-image position-absolute" alt="curve Image" src="assets/images/curved-arrow.png" />
-        <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
+        <img
+          class="curve-image position-absolute"
+          alt="curve Image"
+          src="assets/images/curved-arrow.png"
+        />
+        <mat-card
+          class="bg-white shadow-sm product-reward-card p-3"
+          appearance="outlined"
+        >
           <mat-card-content class="d-block">
-        <!-- form -->
-        <form [formGroup]="addGiftItemForm" (ngSubmit)="onSubmit()">
-          <h4 class="fw-bold mb-1">Coupon Code</h4>
-          <mat-form-field appearance="outline" class="d-block input-lg input">
-            <input matInput formControlName="couponCode" (blur)="validateCouponCode()"/>
-            <mat-icon matSuffix>vpn_key</mat-icon>
-            <mat-error>This is Required</mat-error>
-          </mat-form-field>
-          <div *ngIf = isCouponCodeAlreadyExists class="text-danger">
-            this  coupon code aready exists
-        </div>
-          <h4 class="fw-bold mb-1">Product Image</h4>
-          <mat-form-field appearance="outline" class="d-block input-lg input">
-            <div class="d-flex"><input readonly matInput formControlName="productImage"
-                [value]="selectedFiles?.name || ''"
-
-                 />
-              @if (selectedFiles?.name) {
-              <mat-icon (click)="removeImage()" class="delete-btn">delete</mat-icon>}
-            </div>
-            <mat-error>This is Required</mat-error>
-            @if (!selectedFiles?.name) {
-            <mat-icon matSuffix>cloud_upload</mat-icon>
-            }
-            @if (!selectedFiles?.name) {
-            <input formControlName="productImage" type="file" id="fileInput" class="position-absolute cursor-pointer" name="fileInput" accept="image/*" multiple
-              (change)="selectFiles($event)" />}
-          </mat-form-field>
-          <h4 class="fw-bold mb-1">Product Title</h4>
-          <mat-form-field appearance="outline" class="d-block input-lg input">
-            <input matInput formControlName="productTitle" />
-            <mat-icon matSuffix>redeem</mat-icon>
-            <mat-error>This is Required</mat-error>
-          </mat-form-field>
-          <div class="d-flex">
-            <h4 class="fw-bold mb-1">Product Description</h4><small class="pt-3 ps-1 text-danger">(max char
-              200)</small>
-          </div>
-          <mat-form-field appearance="outline" class="d-block input-lg input">
-            <textarea matInput formControlName="productDescription" rows="5"></textarea>
-            <mat-error *ngIf="addGiftItemForm.get('productDescription')?.hasError('required')">
-              This is Required
-            </mat-error>
-            <mat-error *ngIf="addGiftItemForm.get('productDescription')?.hasError('maxlength')">
-              Maximum 200 characters allowed.
-            </mat-error>
-          </mat-form-field>
-          <div class="mt-2">
-            <button mat-flat-button class="button-mh-60 text-white bg-dark shadow-sm w-100 me-2" [disabled]="isCouponCodeAlreadyExists">
-              <mat-icon>celebration</mat-icon>Create Reward
-            </button>
-          </div>
-        </form>
-        <!-- /form -->
-      </mat-card-content>
-      </mat-card>
+            <!-- form -->
+            <form [formGroup]="addGiftItemForm" (ngSubmit)="onSubmit()">
+              <h4 class="fw-bold mb-1">Coupon Code</h4>
+              <mat-form-field
+                appearance="outline"
+                class="d-block input-lg input"
+              >
+                <input
+                  matInput
+                  formControlName="couponCode"
+                  (blur)="validateCouponCode()"
+                />
+                <mat-icon matSuffix>vpn_key</mat-icon>
+                <mat-error>This is Required</mat-error>
+              </mat-form-field>
+              <div *ngIf="isCouponCodeAlreadyExists" class="text-danger">
+                this coupon code aready exists
+              </div>
+              <h4 class="fw-bold mb-1">Product Image</h4>
+              <mat-form-field
+                appearance="outline"
+                class="d-block input-lg input"
+              >
+                <div class="d-flex">
+                  <input
+                    readonly
+                    matInput
+                    formControlName="productImage"
+                    [value]="selectedFiles?.name || ''"
+                  />
+                  @if (selectedFiles?.name) {
+                  <mat-icon (click)="removeImage()" class="delete-btn"
+                    >delete</mat-icon
+                  >}
+                </div>
+                <mat-error>This is Required</mat-error>
+                @if (!selectedFiles?.name) {
+                <mat-icon matSuffix>cloud_upload</mat-icon>
+                } @if (!selectedFiles?.name) {
+                <input
+                  formControlName="productImage"
+                  type="file"
+                  id="fileInput"
+                  class="position-absolute cursor-pointer"
+                  name="fileInput"
+                  accept="image/*"
+                  multiple
+                  (change)="selectFiles($event)"
+                />}
+              </mat-form-field>
+              <h4 class="fw-bold mb-1">Product Title</h4>
+              <mat-form-field
+                appearance="outline"
+                class="d-block input-lg input"
+              >
+                <input matInput formControlName="productTitle" />
+                <mat-icon matSuffix>redeem</mat-icon>
+                <mat-error>This is Required</mat-error>
+              </mat-form-field>
+              <div class="d-flex">
+                <h4 class="fw-bold mb-1">Product Description</h4>
+                <small class="pt-3 ps-1 text-danger">(max char 200)</small>
+              </div>
+              <mat-form-field
+                appearance="outline"
+                class="d-block input-lg input"
+              >
+                <textarea
+                  matInput
+                  formControlName="productDescription"
+                  rows="5"
+                ></textarea>
+                <mat-error
+                  *ngIf="
+                    addGiftItemForm
+                      .get('productDescription')
+                      ?.hasError('required')
+                  "
+                >
+                  This is Required
+                </mat-error>
+                <mat-error
+                  *ngIf="
+                    addGiftItemForm
+                      .get('productDescription')
+                      ?.hasError('maxlength')
+                  "
+                >
+                  Maximum 200 characters allowed.
+                </mat-error>
+              </mat-form-field>
+              <div class="mt-2">
+                <button
+                  mat-flat-button
+                  class="button-mh-60 text-white bg-dark shadow-sm w-100 me-2"
+                  [disabled]="isCouponCodeAlreadyExists"
+                >
+                  <mat-icon>celebration</mat-icon>Create Reward
+                </button>
+              </div>
+            </form>
+            <!-- /form -->
+          </mat-card-content>
+        </mat-card>
       </div>
     </div>
   </section>
