--- a/client/webUI/src/app/pages/employee/reward-claimed/reward-claimed.component.html
+++ b/client/webUI/src/app/pages/employee/reward-claimed/reward-claimed.component.html
@@ -1,36 +1,53 @@
 <!-- main content -->
 <section class="container-fluid h-100">
-    <div class="container">
-        <div class="row">
-            <div class="col-6">
-                <mat-card class="border-0 bg-white p-3 confirmation-card position-absolute" appearance="outlined">
-                    <mat-card-content class="text-center">
-                        <img mat-card-image src="assets/images/success-message.png" />
-                        <div class="text-dark mt-3">
-                            <div class="banner-font fw-bold">
-                                Congratulations!
-                            </div>
-                            <div class="mt-4">
-                                <div>"Thank you for visiting! We're thrilled to let you know that your reward
-                                    has been confirmed. </div>
-                                <div>Get ready to enjoy your special treat—it's our way of saying
-                                    thanks!"</div>
-                                <div>We'd love to hear your thoughts to make this experience even better.</div>
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                <div><a mat-flat-button [routerLink]="['/home']"
-                                        class="bg-dark text-white py-4 px-5 shadow-sm button-mh-60 mt-4"
-                                        (click)="logOut()">
-                                        <mat-icon>celebration</mat-icon> <span>Back to Home</span></a>
-                                </div>
-                                
-                            </div>
-                        </div>
-                    </mat-card-content>
-                </mat-card>
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <mat-card
+          class="border-0 bg-white p-3 confirmation-card position-absolute"
+          appearance="outlined"
+        >
+          <mat-card-content class="text-center">
+            <div class="logo-font mb-5">
+              <span class="text-dark fw-bold">Choice</span>
+              <span class="text-primary">Chase</span>
             </div>
-        </div>
+            <img mat-card-image src="assets/images/success-message.png" />
+            <div class="text-dark mt-3">
+              <div class="banner-font fw-bold">Congratulations!</div>
+              <div class="mt-4">
+                <div>
+                  "Thank you for visiting! We're thrilled to let you know that
+                  your reward has been confirmed.
+                </div>
+                <div>
+                  Get ready to enjoy your special treat—it's our way of saying
+                  thanks!"
+                </div>
+                <div>
+                  We'd love to hear your thoughts to make this experience even
+                  better.
+                </div>
+              </div>
+              <div class="d-flex justify-content-center">
+                <div>
+                  <a
+                    mat-flat-button
+                    [routerLink]="['/home']"
+                    class="bg-dark text-white py-4 px-5 shadow-sm button-mh-60 mt-4"
+                    (click)="logOut()"
+                  >
+                    <mat-icon>celebration</mat-icon>
+                    <span>Back to Home</span></a
+                  >
+                </div>
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-card>
+      </div>
     </div>
+  </div>
 </section>
 <!-- /main content -->
 
@@ -55,8 +72,8 @@
                   </mat-error>
             </mat-form-field> -->
 
-            <!-- /form -->
-        <!-- </mat-dialog-content>
+<!-- /form -->
+<!-- </mat-dialog-content>
         <mat-dialog-actions class="d-flex border-top border-light">
             <button mat-flat-button class="bg-danger py-3 shadow-sm button-mh-45 me-2"
                 [mat-dialog-close]="true"><mat-icon>close</mat-icon>
