--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -3,47 +3,78 @@
     <h5 class="fw-bold mb-4">Profile Settings</h5>
   </div>
   <!-- admin -->
-  <mat-card class="bg-white border-light product-reward-card p-3" appearance="outlined">
+  <mat-card
+    class="bg-white border-light product-reward-card p-3"
+    appearance="outlined"
+  >
     <div class="d-flex align-items-baseline">
       <!-- searchbar -->
       <form [formGroup]="searchForm" action="">
         <mat-form-field appearance="outline">
-          <input matInput  type="text" formControlName="searchTerm" class="form-control" name="search" placeholder="Search..." />
+          <input
+            matInput
+            type="text"
+            formControlName="searchTerm"
+            class="form-control"
+            name="search"
+            placeholder="Search..."
+          />
           <button matSuffix mat-icon-button aria-label="Search">
             <mat-icon>search</mat-icon>
           </button>
         </mat-form-field>
-       </form>    
+      </form>
       <!-- /searchbar -->
       <!-- note -->
       <div class="ms-5">
-        Note : Admin key comprises of first 3 letters of admin name and dob respectively.
+        Note : Admin key comprises of first 3 letters of admin name and dob
+        respectively.
       </div>
       <!-- /note -->
     </div>
     <!-- table reference with search and pagination -->
     <div>
       <!-- table -->
-      <table mat-table [dataSource]="dataSource" class="bg-white border border-light">
+      <table
+        mat-table
+        [dataSource]="dataSource"
+        class="bg-white border border-light"
+      >
         <!-- Position Column -->
         <ng-container matColumnDef="position">
-          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">No.</th>
-          <td mat-cell *matCellDef="let element;let i = index">{{ i+1 }}</td>
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
+            No.
+          </th>
+          <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
         </ng-container>
         <!--name -->
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Administrator Name</th>
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
+            Administrator Name
+          </th>
           <td mat-cell *matCellDef="let element">{{ element.name }}</td>
         </ng-container>
         <!-- /name -->
         <!-- code-->
         <ng-container matColumnDef="adminCode">
-          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Administrator Code</th>
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
+            Administrator Code
+          </th>
           <td mat-cell *matCellDef="let element" class="position-relative">
             {{ element.empCode }}
-            <span class="ms-2"><mat-icon matSuffix cdkCopyToClipboard={{element.empCode}}
-                (click)="copied(element.empCode)" class="copy-icon">content_copy</mat-icon></span>
-            <div *ngIf="copiedMap.get(element.empCode)" class="copy-text fs-12 position-absolute bg-dark text-white">
+            <span class="ms-2"
+              ><mat-icon
+                matSuffix
+                cdkCopyToClipboard="{{ element.empCode }}"
+                (click)="copied(element.empCode)"
+                class="copy-icon"
+                >content_copy</mat-icon
+              ></span
+            >
+            <div
+              *ngIf="copiedMap.get(element.empCode)"
+              class="copy-text fs-12 position-absolute bg-dark text-white"
+            >
               copied
             </div>
           </td>
@@ -51,46 +82,69 @@
         <!-- /code -->
         <!-- email -->
         <ng-container matColumnDef="email">
-          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Email</th>
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
+            Email
+          </th>
           <td mat-cell *matCellDef="let element">
-            {{ element.email}}
+            {{ element.email }}
           </td>
         </ng-container>
         <!-- /email -->
         <!-- department -->
         <ng-container matColumnDef="department">
-          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Department</th>
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
+            Department
+          </th>
           <td mat-cell *matCellDef="let element">
-            {{ element.department}}
+            {{ element.department }}
           </td>
         </ng-container>
         <!-- /department -->
         <!-- dob -->
         <ng-container matColumnDef="dob">
-          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">DOB</th>
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
+            DOB
+          </th>
           <td mat-cell *matCellDef="let element">
-            {{ element.dob | date:'dd-MM-yyyy'}}
+            {{ element.dob | date : "dd-MM-yyyy" }}
           </td>
         </ng-container>
         <!-- /dob -->
         <!-- joining date -->
         <ng-container matColumnDef="joiningDate">
-          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Joining Date</th>
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
+            Joining Date
+          </th>
           <td mat-cell *matCellDef="let element">
-            {{ element.joiningDate | date:'dd-MM-yyyy'}}
+            {{ element.joiningDate | date : "dd-MM-yyyy" }}
           </td>
         </ng-container>
         <!-- /joining date -->
         <ng-container matColumnDef="Action">
-          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Action</th>
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
+            Action
+          </th>
           <td mat-cell *matCellDef="let element">
             <div class="d-flex">
-              <span (click)="openDialog(element)"  [ngClass]="{'disabled': element.isPrimaryAdmin === true}"
-                class="border border-light p-2 shadow-sm table-action-buttons cursor-pointer">
-                <svg width="16" height="16" viewBox="0 0 12.375 13.75" xmlns="http://www.w3.org/2000/svg">
+              <span
+                (click)="openDialog(element)"
+                [ngClass]="{
+                  disabled: element.isPrimaryAdmin === true,
+                  'opacity-fade': element.isPrimaryAdmin
+                }"
+                class="border border-light p-2 shadow-sm table-action-buttons cursor-pointer"
+              >
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 12.375 13.75"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
                   <path
                     d="M8.017 11.745c0 .237-.19.43-.422.43a.426.426 0 0 1-.422-.43V6.589c0-.238.189-.43.422-.43.233 0 .422.192.422.43v5.156zm-2.813 0c0 .237-.189.43-.422.43a.426.426 0 0 1-.421-.43V6.589c0-.238.189-.43.421-.43.233 0 .422.192.422.43v5.156zm5.175-7.448H1.995a.284.284 0 0 0-.281.312l.724 8.099c.053.59.539 1.042 1.12 1.042h5.258c.582 0 1.068-.452 1.12-1.042l.723-8.099a.288.288 0 0 0-.072-.219.277.277 0 0 0-.208-.093zM4.5 2.148v-.716c0-.158.126-.286.281-.286h2.813c.155 0 .281.128.281.286v.716c0 .08-.063.144-.14.144H4.64a.142.142 0 0 1-.141-.144m7.313.144H9.14A.142.142 0 0 1 9 2.148v-.716C9 .642 8.37 0 7.594 0H4.78c-.777 0-1.406.641-1.406 1.432v.716c0 .08-.063.144-.14.144H.562A.568.568 0 0 0 0 2.865c0 .316.252.572.563.572h11.25a.568.568 0 0 0 .562-.572.568.568 0 0 0-.563-.573"
-                    fill="#FC3E30" fill-rule="evenodd" />
+                    fill="#FC3E30"
+                    fill-rule="evenodd"
+                  />
                 </svg>
               </span>
             </div>
@@ -100,16 +154,23 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
       <!-- /table -->
-      <div class="d-flex justify-content-center mt-2 fw-bold bg-light" *ngIf="dataSource.filteredData.length === 0">
+      <div
+        class="d-flex justify-content-center mt-2 fw-bold bg-light"
+        *ngIf="dataSource.filteredData.length === 0"
+      >
         No result found.
       </div>
       <!-- paginator -->
-      <mat-paginator class="bg-white" [length]="totalUsers"
-      [pageSize]="pageSize"
-      [pageIndex]="currentPage - 1"
-      [pageSizeOptions]="[5, 10, 20]"
-      (page)="onPageChange($event)" showFirstLastButtons
-        aria-label="Select page of periodic elements">
+      <mat-paginator
+        class="bg-white"
+        [length]="totalUsers"
+        [pageSize]="pageSize"
+        [pageIndex]="currentPage - 1"
+        [pageSizeOptions]="[5, 10, 20]"
+        (page)="onPageChange($event)"
+        showFirstLastButtons
+        aria-label="Select page of periodic elements"
+      >
       </mat-paginator>
       <!-- /paginator -->
     </div>
@@ -118,15 +179,25 @@
   <!-- dialog -->
   <ng-template #content>
     <div mat-dialog-title class="banner-font fw-bold">Delete Product!</div>
-    <mat-dialog-content>This will delete the product and cannot be undone.</mat-dialog-content>
+    <mat-dialog-content
+      >This will delete the product and cannot be undone.</mat-dialog-content
+    >
     <mat-dialog-actions>
-      <button mat-button class="bg-dark text-white shadow-sm button-mh-45 py-3 px-4" mat-dialog-close>
+      <button
+        mat-button
+        class="bg-dark text-white shadow-sm button-mh-45 py-3 px-4"
+        mat-dialog-close
+      >
         <mat-icon>cancel</mat-icon>
         Cancel
       </button>
       <!-- The mat-dialog-close directive optionally accepts a value as a result for the dialog. -->
-      <button mat-button class="bg-danger text-white shadow-sm button-mh-45 py-3 px-4" [mat-dialog-close]="true"
-        (click)="matDelete()">
+      <button
+        mat-button
+        class="bg-danger text-white shadow-sm button-mh-45 py-3 px-4"
+        [mat-dialog-close]="true"
+        (click)="matDelete()"
+      >
         <mat-icon>delete</mat-icon>
         Delete
       </button>
