added primary admin ui

--- a/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.css
+++ b/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.css
@@ -17,4 +17,13 @@
     top: 10px;
   }
   /* /copy */
+
+  .disabled {
+    pointer-events: none;    
+  }
+
+
+  .primary-admin{
+    border-radius: 5px;
+  }
   
