--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -147,6 +147,9 @@
                   />
                 </svg>
               </span>
+              <div *ngIf="element.isPrimaryAdmin" class="ms-3 bg-primary p-2 text-white primary-admin">
+                Primary Admin
+              </div>
             </div>
           </td>
         </ng-container>
