--- a/client/webUI/src/app/pages/admin/settings/settings.component.css
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.css
@@ -17,3 +17,11 @@
     top: 10px;   
   }
   /* /copy */
+
+  .disabled {
+    pointer-events: none;    
+  }
+
+  .primary-admin{
+    border-radius: 5px;
+  }
